fix z-index

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -133,6 +133,7 @@
 }
 .mini-how-its-made {
   display: none;
+  z-index: 10;
   @media screen and (min-width: $tablet) {
     display: flex;
     align-items: flex-end;
